--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -9,7 +9,7 @@
   position: relative;
 }
 
-.product-details-modal .product-actions {
+.product-details-modal .page-actions {
   position: absolute;
   bottom: 0;
   width: 100%;
