--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -732,9 +732,10 @@
   }
 
   .green-plus           { background-position: -201px  -41px; width: 27px; height: 27px; }
+  .green-plus-large     { background-position: -247px  -37px; width: 40px; height: 40px; }
 
-  .checkbox             { background-position:  -25px -100px; width: 37px; height: 37px; }
-  .checkbox-checked     { background-position:  -60px -100px; width: 37px; height: 37px; }
+  .checkbox             { background-position: -103px -130px; width: 37px; height: 37px; }
+  .checkbox-checked     { background-position:  -28px -130px; width: 37px; height: 37px; }
 }
 
 .sprite() {
