--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -28,13 +28,14 @@
   margin-top: 1px;
 }
 
-.icon-chevron-down  { #sprite > .chevron-down() }
-.icon-like          { #sprite > .like() }
-.icon-like-active   { #sprite > .like-active() }
-.icon-want          { #sprite > .want() }
-.icon-want-active   { #sprite > .want-active() }
-.icon-try           { #sprite > .try() }
-.icon-try-active    { #sprite > .try-active() }
-.icon-like-count    { #sprite > .like-count() }
-.icon-heart-big     { #sprite > .heart-big() }
-.icon-green-plus    { #sprite > .green-plus() }
+.icon-chevron-down          { #sprite > .chevron-down() }
+.icon-like                  { #sprite > .like() }
+.icon-like-active           { #sprite > .like-active() }
+.icon-want                  { #sprite > .want() }
+.icon-want-active           { #sprite > .want-active() }
+.icon-try                   { #sprite > .try() }
+.icon-try-active            { #sprite > .try-active() }
+.icon-like-count            { #sprite > .like-count() }
+.icon-heart-big             { #sprite > .heart-big() }
+.icon-green-plus            { #sprite > .green-plus() }
+.icon-green-plus-large      { #sprite > .green-plus-large() }
