--- a/modals/product-details/pages/details/product-details-page-tmpl.handlebars
+++ b/modals/product-details/pages/details/product-details-page-tmpl.handlebars
@@ -26,7 +26,7 @@
   </p>
 </section>
 
-<div class="product-actions">
+<div class="page-actions">
   {{! Want Like Try Component }}
   <div class="wlt"></div>
 
