--- a/styles/checkboxes.less
+++ b/styles/checkboxes.less
@@ -4,6 +4,7 @@
 
 .checkbox-label {
   display: inline-block;
+  vertical-align: middle;
   width: 37px;
   height: 37px;
   background-image: url('@{sprite-path}');
@@ -12,11 +13,18 @@
   #sprite > .checkbox()
 }
 
-.checkbox-label.active {
+// Give feedback when clicking
+.checkbox-label:active {
+  opacity: 0.6;
+}
+
+// In IE8, we'll have to add this class with javascript
+.checkbox-label.active,
+input[type="checkbox"]:checked + .checkbox-label {
   #sprite > .checkbox-checked()
 }
 
-.checkbox-label + input[type="checkbox"] {
+input[type="checkbox"] {
   position: absolute;
   z-index: -1;
   opacity: 0;
