--- a/components/add-to-collection/add-to-collection-tmpl.handlebars
+++ b/components/add-to-collection/add-to-collection-tmpl.handlebars
@@ -1,5 +1,5 @@
 <a href="#" class="add-to-collection">
-  <i class="icon-green-plus-large"></i>
+  <i class="icon icon-green-plus-large"></i>
   Add A New Collection
 </a>
 <ul class="collections">
