--- a/modals/product-details/pages/add-to-collections/add-to-collections-tmpl.handlebars
+++ b/modals/product-details/pages/add-to-collections/add-to-collections-tmpl.handlebars
@@ -1,4 +1,4 @@
 <div class="add-to-collections"></div>
 <div class="page-actions">
-  <button class="btn btn-back">Back</button>
+  <button class="btn btn-large btn-back">Back</button>
 </div>
