--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -15,6 +15,11 @@
   width: 100%;
 }
 
+.product-details-modal .product-photo {
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(25,24,25, 0.2);
+}
+
 .product-details-modal .product-details {
   font-size: 18px;
   font-weight: 300;
@@ -32,6 +37,7 @@
   font-size: 14px;
   color: #808080;
   font-style: italic;
+  font-weight: 500;
 }
 
 .product-details .stats {
@@ -51,4 +57,17 @@
 .product-details-modal .wlt {
   display: block;
   margin-bottom: 24px;
+}
+
+a.add-to-collection {
+  display: inline-block;
+  margin-bottom: 4px;
+  color: #4d4d4d;
+  font-style: italic;
+  font-size: 19px;
+}
+
+a.add-to-collection > .icon {
+  vertical-align: middle;
+  margin-right: 13px;
 }
