--- a/styles/main.less
+++ b/styles/main.less
@@ -25,6 +25,7 @@ body {
   margin:         0;
   font-family:    @font-family-base;
   font-size:      @font-size-base;
+  font-weight:    @font-weight-base;
   line-height:    @line-height-base;
   color:          @text-color;
   background:     url('@{body-gradient}') top center repeat-y;
