--- a/styles/modals.less
+++ b/styles/modals.less
@@ -36,6 +36,8 @@
   // Remove focus outline from opened modal
   outline: none;
   padding: 32px 0 12px 0;
+  text-shadow: 0 1px 0 #fff;
+  // color: #4d4d4d;
 
   &.fade {
     .transition(e('opacity .3s linear, top .3s ease-out'));
