--- a/styles/variables.less
+++ b/styles/variables.less
@@ -64,6 +64,8 @@
 @font-size-small:         (@font-size-base * 0.85); // ~15px
 @font-size-mini:          (@font-size-base * 0.70); // ~12px
 
+@font-weight-base:        300;
+
 @line-height-base:        20px;
 
 @headings-font-family:    inherit; // empty to use BS default, @font-family-base
