--- a/modals/product-details/product-details-tmpl.handlebars
+++ b/modals/product-details/product-details-tmpl.handlebars
@@ -6,7 +6,7 @@
     {{! Photo Viewer }}
     <div class="product-photo-viewer" style="text-align: center">
       {{! For now, just put a photo in }}
-      <img src="{{filepicker product.photoUrl 430 430}}" alt="">
+      <img src="{{filepicker product.photoUrl 430 430}}" alt="" class="product-photo">
     </div>
   </div>
 
