started add new collection

--- a/components/add-to-collection/add-to-collection-tmpl.handlebars
+++ b/components/add-to-collection/add-to-collection-tmpl.handlebars
@@ -1,4 +1,4 @@
-<a href="#" class="add-to-collection">
+<a href="/#/add-new-collection" class="add-to-collection">
   <i class="icon icon-green-plus-large"></i>
   Add A New Collection
 </a>
