--- a/modals/add-new-collection/add-new-collection-tmpl.handlebars
+++ b/modals/add-new-collection/add-new-collection-tmpl.handlebars
@@ -10,8 +10,8 @@
   </div>
   <div class="control-group">
     <div class="controls">
-      <button class="btn">Cancel</button>
-      <button class="btn">Save</button>
+      <button class="btn btn-large btn-cancel">Cancel</button>
+      <button class="btn btn-large">Save</button>
     </div>
   </div>
 </form>
