--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -59,7 +59,7 @@
   margin-bottom: 24px;
 }
 
-a.add-to-collection {
+a.add-new-collection {
   display: inline-block;
   margin-bottom: 4px;
   color: #4d4d4d;
@@ -67,7 +67,7 @@ a.add-to-collection {
   font-size: 19px;
 }
 
-a.add-to-collection > .icon {
+a.add-new-collection > .icon {
   vertical-align: middle;
   margin-right: 13px;
 }
