image present.  still need some css position tweaking

--- a/modals/enter-keytag/enter-keytag-tmpl.handlebars
+++ b/modals/enter-keytag/enter-keytag-tmpl.handlebars
@@ -16,7 +16,7 @@
   </form>
 </div>
 <div class="row">
-<!-- TODO: image from sprite-->
+  <img class="offset1" src="/img/keytag.png" width="240" height="162" alt="Your Keytag">
 </div>
 <div class="row">
   <p class="span2 offset1">
