made btn-primary gold gradient with dark text

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -148,7 +148,7 @@ input[type="button"] {
 // Set the backgrounds
 // -------------------------
 .btn-primary {
-  .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight);
+  .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight, @gray-dark);
 }
 // Warning appears are orange
 .btn-warning {
