--- a/styles/variables.less
+++ b/styles/variables.less
@@ -36,6 +36,7 @@
 @orange:                #f89406;
 @pink:                  #c3325f;
 @purple:                #7a43b6;
+@gold:                  #f4d26a;
 
 // Scaffolding
 // -------------------------
@@ -91,8 +92,8 @@
 @btnBackgroundHighlight:            darken(@white, 10%);
 @btnBorder:                         #ccc;
 
-@btnPrimaryBackground:              @link-color;
-@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
+@btnPrimaryBackground:              #ffe783;
+@btnPrimaryBackgroundHighlight:     #d4bb5f;
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
