initial styling/html for collection cards. No new collection yet

--- a/pages/collections/collections-tmpl.handlebars
+++ b/pages/collections/collections-tmpl.handlebars
@@ -1,1 +1,223 @@
-<h1>My Collections</h1>
+<h1 class="page-title">My Collections</h1>
+
+<ul class="collections-list" id="collections-list">
+  {{! <li class="collection collection-new">
+    <button class="add-new-collection product-main">
+      <i class="icon-green-plus-huge"></i>
+      Add A New Collection
+    </button>
+    <aside class="product-secondaries">
+      <div class="product-secondary product-placeholder"></div>
+      <div class="product-secondary product-placeholder"></div>
+      <div class="product-secondary product-placeholder"></div>
+    </aside>
+  </li> }}
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+
+  <li class="collection">
+    <h3 class="collection-title">
+      All (87)
+    </h3>
+
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+      </div>
+    </aside>
+  </li>
+</ul>
