--- a/styles/pages.less
+++ b/styles/pages.less
@@ -25,7 +25,7 @@
   margin: 4px 0 0 0;
 }
 
-.page-header-box h1 {
+.page-title {
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 24px;
