--- a/styles/variables.less
+++ b/styles/variables.less
@@ -244,5 +244,6 @@
 // -------------------------
 
 @texture-linen:             "../img/texture-linen.jpg";
+@texture-wood:              "../img/texture-wood.jpg";
 @body-gradient:             "../img/body-bg.png";
 @sprite-path:               "../img/sprite.png";
