--- a/styles/main.less
+++ b/styles/main.less
@@ -19,6 +19,7 @@
 
 html {
   background: url('@{texture-linen}');
+  min-height: 100%;
 }
 
 body {
@@ -29,7 +30,7 @@ body {
   line-height:    @line-height-base;
   color:          @text-color;
   background:     url('@{body-gradient}') top center repeat-y;
-  min-height:     1000px;
+  min-height:     100%;
 }
 
 
