--- a/pages/collections/collections-tmpl.handlebars
+++ b/pages/collections/collections-tmpl.handlebars
@@ -1,17 +1,17 @@
 <h1 class="page-title">My Collections</h1>
 
 <ul class="collections-list" id="collections-list">
-  {{! <li class="collection collection-new">
-    <button class="add-new-collection product-main">
+  <li class="collection collection-new">
+    <div class="add-new-collection product-main-wrapper">
       <i class="icon-green-plus-huge"></i>
       Add A New Collection
-    </button>
+    </div>
     <aside class="product-secondaries">
-      <div class="product-secondary product-placeholder"></div>
-      <div class="product-secondary product-placeholder"></div>
-      <div class="product-secondary product-placeholder"></div>
+      <div class="product-secondary-wrapper product-placeholder"></div>
+      <div class="product-secondary-wrapper product-placeholder"></div>
+      <div class="product-secondary-wrapper product-placeholder"></div>
     </aside>
-  </li> }}
+  </li>
 
   <li class="collection">
     <h3 class="collection-title">
