--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -733,6 +733,7 @@
 
   .green-plus           { background-position: -201px  -41px; width: 27px; height: 27px; }
   .green-plus-large     { background-position: -247px  -37px; width: 40px; height: 40px; }
+  .green-plus-huge      { background-position: -303px  -38px; width: 69px; height: 69px; }
 
   .checkbox             { background-position: -103px -130px; width: 37px; height: 37px; }
   .checkbox-checked     { background-position:  -28px -130px; width: 37px; height: 37px; }
