--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -39,3 +39,4 @@
 .icon-heart-big             { #sprite > .heart-big() }
 .icon-green-plus            { #sprite > .green-plus() }
 .icon-green-plus-large      { #sprite > .green-plus-large() }
+.icon-green-plus-huge       { #sprite > .green-plus-huge() }
