--- a/pages/collections/collections-tmpl.handlebars
+++ b/pages/collections/collections-tmpl.handlebars
@@ -3,8 +3,10 @@
 <ul class="collections-list" id="collections-list">
   <li class="collection collection-new">
     <div class="add-new-collection product-main-wrapper">
-      <i class="icon-green-plus-huge"></i>
-      Add A New Collection
+      <div class="add-new-wrap">
+        <i class="icon-green-plus-huge icon"></i>
+        <span class="text">Add A New Collection</span>
+      </div>
     </div>
     <aside class="product-secondaries">
       <div class="product-secondary-wrapper product-placeholder"></div>
