got collection cards hooked up to api

--- a/pages/collections/collections-style.less
+++ b/pages/collections/collections-style.less
@@ -24,11 +24,12 @@
   // Require less/css is doing stupid shit with the URI
   // background-image: url('@{texture-wood}');
   background-image: url('../../img/texture-wood.jpg');
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.36);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.36);
   border-radius: 8px;
 
   text-align: center;
   line-height: 0;
+  color: lighten(@text-color, 6%);
 }
 
 .collections-list > .collection:hover {
