--- a/pages/collections/collections-tmpl.handlebars
+++ b/pages/collections/collections-tmpl.handlebars
@@ -15,211 +15,25 @@
     </aside>
   </li>
 
+  {{#each collections}}
   <li class="collection">
     <h3 class="collection-title">
-      All (87)
+      {{truncate this.name 15}} ({{this.numProducts}})
     </h3>
 
     <div class="product-main-wrapper product-shadow-wrapper">
       <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
+      <img src="{{filepicker this.photoUrl 300 300}}" alt="" class="product-main">
     </div>
 
     <aside class="product-secondaries">
+      {{#each this.secondaries}}
       <div class="product-secondary-wrapper product-shadow-wrapper">
         <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
+        <img src="{{filepicker this.photoUrl 76 76}}" alt="" class="product-secondary">
       </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
+      {{/each}}
     </aside>
   </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
-
-  <li class="collection">
-    <h3 class="collection-title">
-      All (87)
-    </h3>
-
-    <div class="product-main-wrapper product-shadow-wrapper">
-      <div class="product-shadow product-main-shadow"></div>
-      <img src="{{filepicker false 300 300}}" alt="" class="product-main">
-    </div>
-
-    <aside class="product-secondaries">
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-      <div class="product-secondary-wrapper product-shadow-wrapper">
-        <div class="product-shadow"></div>
-        <img src="{{filepicker false 76 76}}" alt="" class="product-secondary">
-      </div>
-    </aside>
-  </li>
+  {{/each}}
 </ul>
