--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -50,6 +50,7 @@
 .products-list .like-count {
   display: inline-block;
   margin: 1px 0 0 2px;
+  font-weight: 500;
 }
 
 .products-list .photo-wrapper {
