--- a/pages/collections/collections-tmpl.handlebars
+++ b/pages/collections/collections-tmpl.handlebars
@@ -16,26 +16,24 @@
   </li>
 
   {{#each collections}}
-  <a href="/#/collections/{{this.id}}">
-    <li class="collection">
-      <h3 class="collection-title">
-        {{truncate this.name 15}} ({{this.numProducts}})
-      </h3>
+  <li class="collection" data-id="{{this.id}}">
+    <h3 class="collection-title">
+      {{truncate this.name 13}} ({{this.numProducts}})
+    </h3>
 
-      <div class="product-main-wrapper product-shadow-wrapper">
-        <div class="product-shadow product-main-shadow"></div>
-        <img src="{{filepicker this.photoUrl 300 300}}" alt="" class="product-main">
+    <div class="product-main-wrapper product-shadow-wrapper">
+      <div class="product-shadow product-main-shadow"></div>
+      <img src="{{filepicker this.photoUrl 300 300}}" alt="" class="product-main">
+    </div>
+
+    <aside class="product-secondaries">
+      {{#each this.secondaries}}
+      <div class="product-secondary-wrapper product-shadow-wrapper">
+        <div class="product-shadow"></div>
+        <img src="{{filepicker this.photoUrl 76 76}}" alt="" class="product-secondary">
       </div>
-
-      <aside class="product-secondaries">
-        {{#each this.secondaries}}
-        <div class="product-secondary-wrapper product-shadow-wrapper">
-          <div class="product-shadow"></div>
-          <img src="{{filepicker this.photoUrl 76 76}}" alt="" class="product-secondary">
-        </div>
-        {{/each}}
-      </aside>
-    </li>
-  </a>
+      {{/each}}
+    </aside>
+  </li>
   {{/each}}
 </ul>
