--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -13,19 +13,26 @@
     {{! Filters Button Group }}
     <div class="span6 filters-wrapper">
       <div class="btn-group filters-btn-group">
-        <a class="btn btn-large filter-popular{{#in options.sort "popular"}} active{{/in}}"
+        <a class="btn btn-large filter-popular"
             href="/#/explore/popular">
           Popular
         </a>
-        <a class="btn btn-large filter-nearby{{#in options.sort "distance"}} active{{/in}}"
+        <a class="btn btn-large filter-nearby"
             href="/#/explore/nearby">
           Nearby
         </a>
-        <a class="btn btn-large filter-random{{#in options.sort "random"}} active{{/in}}"
+        <a class="btn btn-large filter-random"
             href="/#/explore/random">
           Mix-It-Up!
         </a>
       </div>
+    </div>
+
+    {{! Edit Collection}}
+    <div class="span2 edit-collectin-wrapper">
+      <button class="btn btn-edit-collection">
+        Edit Collection
+      </button>
     </div>
   </div>
 </header>
