--- a/styles/modals.less
+++ b/styles/modals.less
@@ -64,6 +64,13 @@
   opacity: 1;
 }
 
+.modal-title {
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 45px;
+}
+
 // Modal Sizing
 // ------------
 // Don't care, doing this manually right now just to get it done
