--- a/modals/edit-collection/edit-collection-tmpl.handlebars
+++ b/modals/edit-collection/edit-collection-tmpl.handlebars
@@ -1,4 +1,4 @@
-<h1>Edit Collection</h1>
+<h1 class="modal-title">Edit Collection</h1>
 <form id="edit-collection-form" class="form-horizontal">
   <div class="control-group">
     <label for="edit-collection-name" class="control-label">
