--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -13,18 +13,18 @@
     {{! Filters Button Group }}
     <div class="span6 filters-wrapper">
       <div class="btn-group filters-btn-group">
-        <a class="btn btn-large filter-popular"
-            href="/#/explore/popular">
-          Popular
-        </a>
-        <a class="btn btn-large filter-nearby"
-            href="/#/explore/nearby">
-          Nearby
-        </a>
-        <a class="btn btn-large filter-random"
-            href="/#/explore/random">
-          Mix-It-Up!
-        </a>
+        <button class="btn btn-large btn-want"
+          <i class="icon"></i>
+          Want
+        </button>
+        <button class="btn btn-large btn-like"
+          <i class="icon"></i>
+          Like
+        </button>
+        <button class="btn btn-large btn-tried"
+          <i class="icon"></i>
+          Tried
+        </button>
       </div>
     </div>
 
