--- a/modals/enter-keytag/enter-keytag-tmpl.handlebars
+++ b/modals/enter-keytag/enter-keytag-tmpl.handlebars
@@ -22,5 +22,5 @@
   <p class="span2 offset1">
     Don't have a Keytag? Grab one from any of our participating businesses!
   </p>
-  <button class="btn btn-primary">View Locations</button>
+  <button id="view-locations" class="btn btn-primary">View Locations</button>
 </div>
