got settings mostly done, added plateau component, need to make header badge listen for user change events for screen name, need password flow

--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -51,3 +51,12 @@ a:focus {
 .img-circle {
   .border-radius(500px); // crank the border-radius so it works with most reasonably sized images
 }
+
+// Plateaus
+// -------------------
+
+.plateau {
+  padding: 50px 0;
+  border-radius: 8px;
+  box-shadow: 0 0 6px rgba(0,0,0, 0.33);
+}
