fixed validation, fixed cardId and screen name updating, still need to do update password

--- a/styles/forms.less
+++ b/styles/forms.less
@@ -689,3 +689,8 @@ legend + .control-group {
     padding-left: @horizontalComponentOffset;
   }
 }
+
+// Errors
+input.error {
+  border: 1px solid #FF594A;
+}
