--- a/pages/settings/settings-tmpl.handlebars
+++ b/pages/settings/settings-tmpl.handlebars
@@ -41,9 +41,17 @@
           </div>
         </div>
 
+        {{! Card ID }}
+        <div class="control-group">
+          <label class="control-label" for="form-settings-cardId">Keytag ID</label>
+          <div class="controls">
+            <input type="text" class="field-cardId" id="form-settings-cardId" placeholder="e.g. 404734-AFX" value="{{user.cardId}}">
+          </div>
+        </div>
+
         {{! Password }}
         <div class="control-group">
-          <label class="control-label" for="form-settings-password">Password</label>
+          <label class="control-label" for="form-settings-password">New Password</label>
           <div class="controls">
             <input type="password" class="field-password" id="form-settings-password" placeholder="Enter your password">
           </div>
@@ -51,17 +59,9 @@
 
         {{! Password Confirm }}
         <div class="control-group">
-          <label class="control-label" for="form-settings-password-confirm">Password</label>
+          <label class="control-label" for="form-settings-password-confirm">Confirm</label>
           <div class="controls">
             <input type="password" class="field-password" id="form-settings-password-confirm" placeholder="One more time">
-          </div>
-        </div>
-
-        {{! Card ID }}
-        <div class="control-group">
-          <label class="control-label" for="form-settings-cardId">Keytag ID</label>
-          <div class="controls">
-            <input type="text" class="field-cardId" id="form-settings-cardId" placeholder="e.g. 404734-AFX">
           </div>
         </div>
 
