--- a/pages/settings/settings-tmpl.handlebars
+++ b/pages/settings/settings-tmpl.handlebars
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="span3 avatar-wrapper">
       <img src="{{filepicker user.avatarUrl 250 250}}" class="avatar" alt="Your Profile Picture">
-      <button class="btn btn-primary">Change Photo</button>
+      <button class="btn btn-primary btn-change-photo">Change Photo</button>
     </div>
 
     <div class="span5 form-wrapper">
