--- a/styles/pages.less
+++ b/styles/pages.less
@@ -25,6 +25,13 @@
   margin: 4px 0 0 0;
 }
 
+.page-header-box .search-form-btn {
+  // So it doesn't affect flow of other contet
+  position: absolute;
+  left: 0;
+  top: 4px; // input has 4px margin-top
+}
+
 .page-title {
   text-transform: uppercase;
   text-align: center;
@@ -32,6 +39,7 @@
 }
 
 .page-header-box .filters-wrapper {
+  position: relative;
   text-align: center;
 }
 
