--- a/pages/explore/explore-tmpl.handlebars
+++ b/pages/explore/explore-tmpl.handlebars
@@ -12,6 +12,9 @@
 
     {{! Filters Button Group }}
     <div class="span6 filters-wrapper">
+      {{! Need to put search button here Like design}}
+      <button class="btn btn-primary search-form-btn">Search</button>
+
       <div class="btn-group filters-btn-group">
         <a class="btn btn-large filter-popular{{#in options.sort "popular"}} active{{/in}}"
             href="/#/explore/popular">
