added search, waiting on magic to be fixed for collection product ssearching

--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -12,6 +12,9 @@
 
     {{! Filters Button Group }}
     <div class="span6 filters-wrapper">
+      {{! Need to put search button here Like design}}
+      <button class="btn btn-primary search-form-btn">Search</button>
+
       <div class="btn-group filters-btn-group">
         <button class="btn btn-large btn-want"
           <i class="icon"></i>
