added icon fonts

--- a/styles/main.less
+++ b/styles/main.less
@@ -16,6 +16,7 @@
 @import "forms.less";
 @import "checkboxes.less";
 @import "pages.less";
+@import "icons.less";
 
 html {
   background: url('@{texture-linen}');
