added modal less with some positioning tweaks.  still needs work

--- a/modals/enter-keytag/enter-keytag-tmpl.handlebars
+++ b/modals/enter-keytag/enter-keytag-tmpl.handlebars
@@ -16,10 +16,10 @@
   </form>
 </div>
 <div class="row">
-  <img class="offset1" src="/img/keytag.png" width="240" height="162" alt="Your Keytag">
+  <img class="offset1 keytag-image" src="/img/keytag.png" width="240" height="162" alt="Your Keytag">
 </div>
 <div class="row">
-  <p class="span2 offset1">
+  <p id="view-locations-text" class="span3">
     Don't have a Keytag? Grab one from any of our participating businesses!
   </p>
   <button id="view-locations" class="btn btn-primary">View Locations</button>
