almost finished with punchcards page

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -58,7 +58,7 @@
               <a href="#">Connect your Keytag</a>
             </li>
             <li>
-              <a href="#">Your PunchCards</a>
+              <a href="/#/my-punchcards">Your PunchCards</a>
             </li>
             <li>
               <a href="/#/settings">Settings</a>
