--- a/styles/variables.less
+++ b/styles/variables.less
@@ -245,5 +245,7 @@
 
 @texture-linen:             "../img/texture-linen.jpg";
 @texture-wood:              "../img/texture-wood.jpg";
+@texture-jeans-blue:        "../img/texture-jeans-blue.jpg";
+@texture-jeans-yellow:      "../img/texture-jeans-yellow.jpg";
 @body-gradient:             "../img/body-bg.png";
 @sprite-path:               "../img/sprite.png";
