few more tweaks

--- a/pages/punch-cards/punch-cards-style.less
+++ b/pages/punch-cards/punch-cards-style.less
@@ -75,8 +75,14 @@
   vertical-align: middle;
 }
 
+.title-and-description {
+  margin-left: 5px;
+}
+
 .punchcard-business-logo {
   .add-gutter-left();
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
 .title-and-description > .title {
