pretty much done except for button height.

--- a/modals/enter-keytag/enter-keytag-style.less
+++ b/modals/enter-keytag/enter-keytag-style.less
@@ -1,7 +1,17 @@
 .keytag-image {
-  padding-left:123px;
+  padding-left:84px;
+}
+
+#view-locations-area {
+  margin-top:20px;
 }
 
 #view-locations-text {
   padding-left:68px;
+  width:280px;
+  font-style:italic;
+}
+
+#view-locations-btn {
+  width:185px;
 }
