--- a/modals/enter-keytag/enter-keytag-tmpl.handlebars
+++ b/modals/enter-keytag/enter-keytag-tmpl.handlebars
@@ -18,9 +18,9 @@
 <div class="row">
   <img class="offset1 keytag-image" src="/img/keytag.png" width="240" height="162" alt="Your Keytag">
 </div>
-<div class="row">
+<div id="view-locations-area" class="row">
   <p id="view-locations-text" class="span3">
     Don't have a Keytag? Grab one from any of our participating businesses!
   </p>
-  <button id="view-locations" class="btn btn-primary">View Locations</button>
+  <button id="view-locations-btn" class="btn btn-primary">View Locations</button>
 </div>
