--- a/pages/punch-cards/punch-cards-style.less
+++ b/pages/punch-cards/punch-cards-style.less
@@ -16,6 +16,10 @@
   border-top-right-radius: 5px;
 }
 
+.page-punch-cards .page-title {
+  margin-bottom: 44px;
+}
+
 .no-punch-cards {
   margin: 50px 0;
   text-align: center;
@@ -65,8 +69,27 @@
 // ----------------
 
 .punchcard-group > .punchcard {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  // Override bootstraps grid margin madness
+  margin-left: 0;
+
+  border-top: 1px #ddd solid;
+
+  cursor: pointer;
+}
+
+.punchcard-group > .punchcard:first-child {
+  border-top: none;
+}
+
+.punchcard-group > .punchcard:hover {
+  #gradient > .vertical(#e1f4fa, #e5f9ff);
+}
+
+.punchcard .details {
+  // Override bootstraps grid margin madness
+  margin-left: 0;
 }
 
 .punchcard-business-logo,
@@ -88,6 +111,7 @@
 .title-and-description > .title {
   font-size: 20px;
   font-weight: normal;
+  color: #555;
   line-height: 20px;
   margin: 4px 0 4px 0;
 }
@@ -100,9 +124,39 @@
   color: @gray-light;
 }
 
+.punchcard .num-punches {
+  text-align: center;
+  font-size: 22px;
+  margin-top: 16px;
+  font-weight: 100;
+}
+
+.punchcard .num-rewards-wrapper {
+  text-align: center;
+}
+
+.punchcard .num-rewards-badge {
+  .sprite();
+  display: inline-block;
+  width: 55px;
+  height: 55px;
+  background-position: -10px -198px;
+}
+
+.punchcard .num-rewards {
+  margin-top: 27px;
+  padding-right: 2px;
+  color: #28DD5C;
+  font-weight: 800;
+}
+
 
 // Punch Card Indicators
 // ---------------------
+
+.punch-indicators {
+  margin-top: 15px;
+}
 
 .punch-indicator,
 .elite-punch-indicator {
