positioning is pretty close to correct

--- a/modals/enter-keytag/enter-keytag-tmpl.handlebars
+++ b/modals/enter-keytag/enter-keytag-tmpl.handlebars
@@ -9,7 +9,7 @@
         Keytag ID:
       </label>
       <div class="controls">
-        <input type="text" id="keytag">
+        <input type="text" id="keytag" placeholder="Ex: 606573-BOC">
         <button class="btn btn-primary">Submit</button>
       </div>
     </div>
